tests/baselines/reference/genericCallWithTupleType(strict=true).errors.txt
genericCallWithTupleType.ts(9,1): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(10,10): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(11,10): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(12,1): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(12,1): error TS2322: Type '[string, number, boolean, boolean]' is not assignable to type '[string, number]'.
  Source has 4 element(s) but target allows only 2.
genericCallWithTupleType.ts(13,10): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(13,20): error TS2493: Tuple type '[string, number]' of length '2' has no element at index '2'.
genericCallWithTupleType.ts(14,1): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(14,1): error TS2322: Type '{ a: string; }' is not assignable to type 'undefined'.
genericCallWithTupleType.ts(14,11): error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
genericCallWithTupleType.ts(15,10): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(15,20): error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
genericCallWithTupleType.ts(16,1): error TS2454: Variable 'i2' is used before being assigned.
genericCallWithTupleType.ts(17,1): error TS2454: Variable 'i2' is used before being assigned.
genericCallWithTupleType.ts(18,1): error TS2454: Variable 'i2' is used before being assigned.
genericCallWithTupleType.ts(19,1): error TS2454: Variable 'i2' is used before being assigned.
genericCallWithTupleType.ts(22,1): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(22,14): error TS2322: Type 'number' is not assignable to type 'string'.
genericCallWithTupleType.ts(22,17): error TS2322: Type 'string' is not assignable to type 'number'.
genericCallWithTupleType.ts(23,1): error TS2454: Variable 'i1' is used before being assigned.
genericCallWithTupleType.ts(23,14): error TS2322: Type '{}' is not assignable to type 'string'.
genericCallWithTupleType.ts(23,18): error TS2322: Type '{}' is not assignable to type 'number'.
genericCallWithTupleType.ts(24,1): error TS2454: Variable 'i2' is used before being assigned.
genericCallWithTupleType.ts(24,1): error TS2322: Type '[{}]' is not assignable to type '[{}, {}]'.
  Source has 1 element(s) but target requires 2.


==== genericCallWithTupleType.ts (24 errors) ====
    interface I<T, U> {
        tuple1: [T, U];
    } 
    
    var i1: I<string, number>;
    var i2: I<{}, {}>;
    
    // no error
    i1.tuple1 = ["foo", 5];
    ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
    var e1 = i1.tuple1[0];  // string
             ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
    var e2 = i1.tuple1[1];  // number
             ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
    i1.tuple1 = ["foo", 5, false, true];
    ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
    ~~~~~~~~~
!!! error TS2322: Type '[string, number, boolean, boolean]' is not assignable to type '[string, number]'.
!!! error TS2322:   Source has 4 element(s) but target allows only 2.
    var e3 = i1.tuple1[2];  // {}
             ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
                       ~
!!! error TS2493: Tuple type '[string, number]' of length '2' has no element at index '2'.
    i1.tuple1[3] = { a: "string" };
    ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
    ~~~~~~~~~~~~
!!! error TS2322: Type '{ a: string; }' is not assignable to type 'undefined'.
              ~
!!! error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
    var e4 = i1.tuple1[3];  // {}
             ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
                       ~
!!! error TS2493: Tuple type '[string, number]' of length '2' has no element at index '3'.
    i2.tuple1 = ["foo", 5];
    ~~
!!! error TS2454: Variable 'i2' is used before being assigned.
    i2.tuple1 = ["foo", "bar"];
    ~~
!!! error TS2454: Variable 'i2' is used before being assigned.
    i2.tuple1 = [5, "bar"];
    ~~
!!! error TS2454: Variable 'i2' is used before being assigned.
    i2.tuple1 = [{}, {}];
    ~~
!!! error TS2454: Variable 'i2' is used before being assigned.
    
    // error
    i1.tuple1 = [5, "foo"];
    ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
                 ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                    ~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    i1.tuple1 = [{}, {}];
    ~~
!!! error TS2454: Variable 'i1' is used before being assigned.
                 ~~
!!! error TS2322: Type '{}' is not assignable to type 'string'.
                     ~~
!!! error TS2322: Type '{}' is not assignable to type 'number'.
    i2.tuple1 = [{}];
    ~~
!!! error TS2454: Variable 'i2' is used before being assigned.
    ~~~~~~~~~
!!! error TS2322: Type '[{}]' is not assignable to type '[{}, {}]'.
!!! error TS2322:   Source has 1 element(s) but target requires 2.
    